syntax = "proto3";
option go_package = "sr.ht/moyanhao/bedrock-metaserver/messages";

package messages;

enum ErrorCode {
    ErrOk = 0;
}

message HeartBeatRequest {
}

message HeartBeatResponse {
    ErrorCode error = 255;
}

service MetaService {
    rpc HeartBeat (HeartBeatRequest) returns (HeartBeatResponse) {}
}
